Completed all interfaces for client Corporate inscription

--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -87,7 +87,7 @@
                         <button class="btn btn-secondary butn" (click)="Retour()">{{ 'dash.backButton' | translate }}</button>
                     </div>
                     <div class="col text-end">
-                            <button class="btn btn-secondary butn" (click)="Suivant('adresse')" [disabled]="!isFormValid()">{{ 'dash.nextButton' | translate }}</button>
+                            <button class="btn btn-secondary butn" (click)="Suivant('informations-entreprise')" [disabled]="!isFormValid()">{{ 'dash.nextButton' | translate }}</button>
                         
                     </div>
                 </div>
