--- a/src/app/home/blog/blog.component.html
+++ b/src/app/home/blog/blog.component.html
@@ -12,46 +12,22 @@
                         <p class="mb-0">{{ 'homepage.blog.flash' | translate }}</p>
                     </div>
                 </div>
+                
                 <div class="row g-xl-5 mt-n1-9">
-                    <div class="col-md-6 col-lg-4 mt-1-9">
-                        <article class="card card-style4 h-100">
-                            <img src="../../../assets/img/blog/blog-01.jpg" alt="...">
-                            <div class="card-body p-1-9">
-                                <ul class="list-unstyled mb-3">
-                                    <li class="d-inline-block me-3 "><a href="" class="display-31"><i class="ti-calendar me-1 colorban"></i> Mar 23, 2021</a></li>
-                                    <li class="d-inline-block "><a href="" class="display-31"><i class="fas fa-comment me-1 colorban"></i> 10 Comment</a></li>
-                                </ul>
-                                <h3 class="h5 mb-3"><a href="blog-details.html">Everything you need to know about loan.</a></h3>
-                                <p class="mb-0">At the point when you are needing crisis reserves, moment credits guarantee rapid.</p>
-                            </div>
-                        </article>
+                    <!-- Iterate over blogs array -->
+                    <div class="col-md-6 col-lg-4 mt-1-9" *ngFor="let blog of blogs">
+                      <article class="card card-style4 h-100">
+                        <img [src]="blog.blog_photo" alt="...">
+                        <div class="card-body p-1-9">
+                          <ul class="list-unstyled mb-3">
+                            <li class="d-inline-block me-3"><a href="#!" class="display-31"></a></li>
+                          </ul>
+                          <!-- Access properties of individual blog -->
+                          <h3 class="h5 mb-3"><a href="blog-details.html">{{ blog.blog_title }}</a></h3>
+                          <p class="mb-0">{{ blog.blog_description }}</p>
+                        </div>
+                      </article>
                     </div>
-                    <div class="col-md-6 col-lg-4 mt-1-9">
-                        <article class="card card-style4 h-100">
-                            <img src="../../../assets/img/blog/blog-02.jpg" alt="...">
-                            <div class="card-body p-1-9">
-                                <ul class="list-unstyled mb-3">
-                                    <li class="d-inline-block me-3"><a href="" class="display-31"><i class="ti-calendar me-1 colorban"></i> Mar 18, 2021</a></li>
-                                    <li class="d-inline-block"><a href="" class="display-31"><i class="fas fa-comment me-1 colorban"></i> 06 Comment</a></li>
-                                </ul>
-                                <h3 class="h5 mb-3"><a href="blog-details.html">Five secrets about loan that nobody will tell you.</a></h3>
-                                <p class="mb-0">At the point when you are needing crisis reserves, moment credits guarantee rapid.</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-md-6 col-lg-4 mt-1-9">
-                        <article class="card card-style4 h-100">
-                            <img src="../../../assets/img/blog/blog-03.jpg" alt="...">
-                            <div class="card-body p-1-9">
-                                <ul class="list-unstyled mb-3">
-                                    <li class="d-inline-block me-3"><a href="" class="display-31"><i class="ti-calendar me-1 colorban"></i> Mar 10, 2021</a></li>
-                                    <li class="d-inline-block"><a href="" class="display-31"><i class="fas fa-comment me-1 colorban"></i> 12 Comment</a></li>
-                                </ul>
-                                <h3 class="h5 mb-3"><a href="blog-details.html">Master the skills of loan and be successful.</a></h3>
-                                <p class="mb-0">At the point when you are needing crisis reserves, moment credits guarantee rapid.</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
+                  </div>
             </div>
         </section>
