--- a/src/app/client/corporate-dashboard/mot-de-passe-entreprise/mot-de-passe-entreprise.component.html
+++ b/src/app/client/corporate-dashboard/mot-de-passe-entreprise/mot-de-passe-entreprise.component.html
@@ -33,7 +33,7 @@
                     <div class="col-md-6">
                         <label for="qest1">{{ 'professionnel.authentication.condsec1' | translate }}</label><span class="required">*</span>               
                         <div class="input-group">
-                            <select id="qest1" name="qest1" formControlName="qest1" class="form-select">
+                            <select id="qest1" name="qest1" class="form-select">
                                 <option value="" disabled selected>{{ 'professionnel.authentication.select_question1' | translate }}</option>
                                 <option value="Quel est le nom de votre mentor professionnel ?">{{ 'professionnel.authentication.cond1' | translate }}</option>
                                 <option value="Quel est le nom de votre premier client en tant qu'entreprise ?">{{ 'professionnel.authentication.cond2' | translate }}</option>
@@ -52,7 +52,7 @@
                     <div class="col-md-6">
                         <label for="qest2">{{ 'professionnel.authentication.condsec1' | translate }}</label><span class="required">*</span>               
                         <div class="input-group">
-                            <select id="qest2" name="qest2" formControlName="qest2" class="form-select">
+                            <select id="qest2" name="qest2"  class="form-select">
                                 <option value="" disabled selected>{{ 'professionnel.authentication.select_question2' | translate }}</option>
                                 <option value="Quel est le nom de votre mentor professionnel ?">{{ 'professionnel.authentication.cond1' | translate }}</option>
                                 <option value="Quel est le nom de votre premier client en tant qu'entreprise ?">{{ 'professionnel.authentication.cond2' | translate }}</option>
