--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div id="copyright-content">
             <i class="bi bi-c-circle"></i>
-            <span>{{ currentYear }}</span> BFI bank
+            <span>{{ currentYear }}</span> Bamboo
         </div>
     </div>
 </section>
