--- a/src/app/home/topbar/topbar.component.html
+++ b/src/app/home/topbar/topbar.component.html
@@ -59,7 +59,7 @@
                                 <li><a href="#">Actionnaires</a>
                                     <ul>
                                         <li><a href="">Devenir Actionnaire</a></li>
-                                        <li><a href="">Signalétique De l'Action BFI BANK</a></li>
+                                        <li><a href="">Signalétique De l'Action Bamboo</a></li>
                                         <li><a href="">Rapports Annuels</a></li>
                                         <li><a href="">Etat Financières & Indicateurs Trimestriels</a></li>
                                         <li><a href="">Accédez à Votre Espace Privé D'Actionnariat</a></li>
