--- a/src/app/client/dashboard/sidenav/sidenav.component.css
+++ b/src/app/client/dashboard/sidenav/sidenav.component.css
@@ -94,7 +94,7 @@ margin-bottom: 0.625rem;
 }
 }
 .active{
-background-color: #fff;
+background-color: #fff ;
 border-radius: 0.625rem;
 
 .sidenav-link-icon,
@@ -117,3 +117,7 @@ color: #000;
          color: #000;
     }
 }
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+  }
