--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 text-center text-md-start mt-3 mt-md-0 order-2 order-md-1">
-                            <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Bank Powered By <a href="https://bfigroupe.com/" target="_blank" class="colorban">BFI Group</a></p>
+                            <p class="d-inline-block text-white mb-0">&copy; <span class="current-year"></span> Bank Powered By <a href="https://bfigroupe.com/" target="_blank" class="colorban">BFI Groupe</a></p>
                         </div>
                         <div class="col-md-6 text-md-end order-1 order-md-2">
                             <ul class="social-icon-style1">
