--- a/src/app/client/transactionsDashboard/rendez-vous/rendez-vous.component.html
+++ b/src/app/client/transactionsDashboard/rendez-vous/rendez-vous.component.html
@@ -1,4 +1,4 @@
-
+ 
 <body class="g-sidenav-show bg-gray-100">  
     <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
         <div class="sidenav-header">
@@ -14,11 +14,7 @@
             <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" navbar-scroll="true">
                 <div class="container-fluid py-1 px-3 bg-gray-100">
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-                            <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-                            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
-                        </ol>
-                        <h6 class="font-weight-bolder mb-0">Dashboard</h6>
+                        
                     </nav>
                     <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
                         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -125,93 +121,42 @@
                     </div>
                 </div>
             </nav>
-            <div class="container-fluid pt-3 bg-gray-100">
-                <div class="row removable">           
-                    <div class="col-xl-5 col-sm-6">
-                        <div class="card mb-4">
-                            <div class="card-body p-3">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <div class="numbers">
-                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Vous n'avez pas encore de cartes</p>
-                                            <h5 class="font-weight-bolder mb-0">
-                                                <span class="text-success text-sm font-weight-bolder">+5%</span>
-                                            </h5>
-                                        </div>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                                          <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"></i>
-                                        </div>
-                                    </div>                                 
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="card mb-4">
-                            <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100" style="background-image: url('../assets/img/ivancik.jpeg');">
-                                <span class="mask bg-gradient-dark"></span>
-                                <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
-                                    <h5 class="text-white font-weight-bolder mb-4 pt-2">MISE À DISPOSITION DIGITALE</h5>
-                                    <p class="text-white">METTEZ A DISPOSITION DES FONDS POUR UNE TIERCE PERSONNE DEPUIS VOTRE TÉLÉPHONE SANS VOUS DÉPLACER.</p>
-                                        <p class="text-white text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                                        De 5.000 FCFA À 5.000 FCFA <br>
-                                            <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                                        FRAIS :1% HT PLAFONNÉS À 15.000 FCFA
-                                        </p>
-                                </div>
-                            </div>
+            <div class="container-fluid py-4">
+                <div class="row">
+                <div class="col-12">
+                <div class="card mb-4">
+                    <div class="card-header pb-0" >
+                        <h6>Historique des demandes de rendez-vous</h6>
+                        <div class="float-right">
+                            <button  type="submit" class="btn btn-secondary butn">
+                                <i class="fas fa-user-plus"></i>
+                                Demandez un rendez-vous
+                            </button>                           
                         </div>
                     </div>
+                    
+                <div class="card-body px-0 pt-0 pb-2">
+                <div class="table-responsive p-0">
+                <table class="table align-items-center mb-0">
+                <thead>
+                <tr>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Agence	</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date du rendez-vous </th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Plage horaire</th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Motif</th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Statut</th>
+                </tr>
+                </thead>
+                <tbody>
                
-                    <div class="col-lg-7 col-md-6">
-                        <div class="card mb-4">
-                            <div class="card-header pb-0">
-                                <div class="row">
-                                    <div class="col-8">
-                                        <h6>Contacts</h6>
-                                        <p class="text-sm mb-0">
-                                            <span class="font-weight-bold ms-1">Vous n'avez pas encore de bénéficiaires à afficher.<br> Ajoutez-en .</span>
-                                        </p>
-                                    </div>
-                                    <div class="col-4 text-end">
-                                        <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                                          <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"></i>
-                                        </div>
-                                    </div> 
-    
-                                </div>
-                            </div>
-                            <div class="card-body px-4 pb-2">
-                                <div class="row">
-                                    <h6>Factures et Paiements</h6>
-                                    <p class="text-sm mb-0">
-                                        <span class="font-weight-bold ms-1">Vous n'avez pas encore désigné des services <br>auxquels effectuer des paiements</span>
-                                    </p>
-                                </div>
-                                <div class="row">
-                                    <h6>Activités</h6>
-                                    <p class="text-sm mb-0">
-                                        <span class="font-weight-bold ms-1"></span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   
+
+                </tbody>
+                </table>
                 </div>
-                <div class="row mb-4 removable">
-                    <div class="col-lg-5">
-                        <div class="card mb-4">
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-7">
-                        <div class="card mb-4">                       
-                        </div>
-                    </div>
                 </div>
-            </div>  
-        </main>
-    
+                </div>
+                </div>
+                </div>             
+                </div>         
+        </main>   
 </body>
