--- a/src/app/client/transactionsDashboard/transaction-nav/transaction-nav.component.html
+++ b/src/app/client/transactionsDashboard/transaction-nav/transaction-nav.component.html
@@ -1,4 +1,11 @@
-
+<div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
+  <div class="sidenav-header">
+      <a class="navbar-brand m-0" href="javascript:;">
+                   
+          <span class="ms-1 font-weight-bold"><img  id="logo" src="../../../assets/img/logos/logo.png"> </span>
+      </a>
+  </div>
+  <hr class="horizontal dark mt-0">
 <hr class="horizontal dark mt-0">
 <ul class="navbar-nav">
   <!-- Loop through sidebar items -->
@@ -22,3 +29,4 @@
     </a>
   </li>
 </ul>
+</div>
