side bar impl and qr code impl

--- a/src/app/client/updatedpassword/updatedpassword.component.html
+++ b/src/app/client/updatedpassword/updatedpassword.component.html
@@ -8,7 +8,7 @@
                 <div class="col-md-6">   
                         <div>
                             <h4>{{ 'updatedpassword.title' | translate }}</h4>
-                            <a class="lien" href="/login">{{ 'updatedpassword.login' | translate }}</a>
+                            <a class="lien" href="/bfi/login">{{ 'updatedpassword.login' | translate }}</a>
                         </div>                
                 </div> 
             </div>
