--- a/src/app/home/topbar/topbar.component.html
+++ b/src/app/home/topbar/topbar.component.html
@@ -124,7 +124,7 @@
                             <div class="attr-nav">
                                 <ul>
                                     <li class="search"><a href="#!"><i class="fas fa-search"></i></a></li>
-                                    <li class="d-none d-lg-inline-block"><a [routerLink]="['/login']" class="butn small homebtn">{{ 'homepage.topbar_component.smallBtn' | translate }}</a></li>
+                                    <li class="d-none d-lg-inline-block"><a [routerLink]="['/bfi/login']" class="butn small homebtn">{{ 'homepage.topbar_component.smallBtn' | translate }}</a></li>
                                     <!-- Flag Selector -->
                                     <li class="dropdown" (click)="toggleDropdown($event)">
                                         <a class="dropdown-toggle" data-toggle="dropdown">
