--- a/src/app/client/transactionsDashboard/transaction-nav/transaction-nav.component.css
+++ b/src/app/client/transactionsDashboard/transaction-nav/transaction-nav.component.css
@@ -5,9 +5,48 @@
 
 
 
-.sidenav {
+.sidenav.navbar {
     height: 100vh; /* Prendre toute la hauteur de l'écran */
-    overflow-x: hidden !important; 
-    overflow-y: hidden !important; 
     z-index : -999 !important;
+    overflow-x: hidden !important;
 }
+.icon-inactive{
+    color: black !important;
+}
+
+.nav-item {
+    position: relative;
+  }
+
+  .submenu-list.active {
+    max-height: 500px; /* Adjust this value based on your needs */
+
+  }
+  
+  .submenu-list {
+    list-style-type: none;
+    padding-left: 1em;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s ease-out; /* Add transition for smooth animation */
+  }
+  /* 
+.submenu-item {
+    padding-left: 20px; /* Indent submenu items */
+  
+  /* 
+  .submenu-link {
+    text-decoration: none;
+    color: #282530;
+  }
+  
+  .has-submenu.active .submenu-list {
+    display: block; /* Show when active */
+  
+  /* 
+  .has-submenu.active .bi-chevron-down {
+    transform: rotate(180deg); /* Rotate caret when expanded */
+    
+
+
+
