--- a/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
+++ b/src/app/client/transactionsDashboard/transactionsdash/transactionsdash.component.html
@@ -1,6 +1,6 @@
  
 <body class="g-sidenav-show bg-gray-100">  
-    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
+    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100 side" id="sidenav-main" >
         <div class="sidenav-header">
             <a class="navbar-brand m-0" href="javascript:;">
                          
