--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
@@ -15,3 +15,25 @@
 .card-body.p-3 {
     margin: 40px;
 }
+
+.search-input{
+    margin: 30px 0 0 40px !important;
+    width: 80% !important;
+}
+
+.icon{
+    margin-top: 30px !important;
+    margin-left: -10pc !important;
+}
+  
+
+.form-control-mvmt{
+    border-radius: 10px !important;
+    width: 80% !important;
+
+}
+
+
+
+
+
