added contact management and QR code reader for client

--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
@@ -34,6 +34,8 @@
 }
 
 
-
+::ng-deep .bg-gradient-primary {
+    background-image: linear-gradient(310deg, #cca558, #8f7134) !important; /* Override with ng-deep */
+}
 
 
