--- a/src/app/client/transactionsDashboard/default-layout/transaction-nav/transaction-nav.component.css
+++ b/src/app/client/transactionsDashboard/default-layout/transaction-nav/transaction-nav.component.css
@@ -58,5 +58,16 @@
     background-image: linear-gradient(310deg, #c2862d, #3c2f1a); /* New gradient */
 }
 
+.expandable-content {
+  transition: max-height 0.3s ease; /* Smooth transition for expansion/collapse */
+  max-height: 0; /* Collapsed state */
+  overflow: hidden; /* Hide overflow when collapsed */
+}
+
+.navbar-nav .nav-item[ng-reflect-expanded="true"] .expandable-content {
+  max-height: 200px; /* Set a reasonable max-height when expanded */
+}
+
+
 
 
